# mlp_converters

./: README.md  pyproject.toml
src/mlp_converters/: convert_file.py  geometry.py  util.py
src/mlp_converters/aprops/: elems.py
src/mlp_converters/fileIO/: ml_abn.py  ml_eatom.py
